礼无忧第二次提交

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 			<div class="left-menu">
 				<a href="#">礼物分类
 					<div class="show" style="display: none;">
-						<a href="#">少女心饰</a>
-						<a href="#">萌萌美物</a>
-						<a href="#">为爱停留</a>
-						<a href="#">潮流时尚</a>
-						<a href="#">科技达人</a>
-						<a href="#">幸福烙印</a>
-						<a href="#">爱情保鲜</a>
+						<a href="list1.html">少女心饰</a>
+						<a href="list1.html">萌萌美物</a>
+						<a href="list1.html">为爱停留</a>
+						<a href="list1.html">潮流时尚</a>
+						<a href="list1.html">科技达人</a>
+						<a href="list1.html">幸福烙印</a>
+						<a href="list1.html">爱情保鲜</a>
 					</div>
 				</a>
 				<i class="small-menu"></i>
@@ -33,8 +33,8 @@
 			<div class="list">
 				<ul>
 					<li class="list1"><a href="#">送礼导航</a></li>
-					<li class="list2"><a href="#">创意礼物</a></li>
-					<li class="list2"><a href="#">新品上架</a></li>
+					<li class="list2"><a href="create.html">创意礼物</a></li>
+					<li class="list2"><a href="newproduct.html">新品上架</a></li>
 					<li class="list2"><a href="#">520礼物</a></li>
 				</ul>
 			</div>
@@ -99,16 +99,16 @@
 	<!-- services -->
 	<div class="services">
 		<ul>
-			<li class="f1">
+			<li class="serve">
 				<i class="icon icon-bgr1"></i>专属定制服务
 			</li>
-			<li class="f1">
+			<li class="serve">
 				<i class="icon icon2-bgr1"></i>激光镭雕工艺
 			</li>
-			<li class="f1">
+			<li class="serve">
 				<i class="icon icon3-bgr1"></i>免费代写贺卡
 			</li>
-			<li class="f1">
+			<li class="serve">
 				<i class="icon icon4-bgr1"></i>精心专业设计
 			</li>
 
@@ -352,14 +352,117 @@
 				</div>
 			</div>
 			<div class="free-return">
-				
+				<ul>
+					<li>
+						<i class="item1-bgr1 it1"></i>
+						30天免费退货
+					</li>
+					<li>
+						<i class="item2-bgr1 it1"></i>
+						100%正品保证
+					</li>
+					<li>
+						<i class="item3-bgr1 it1"></i>
+						全场免运费
+					</li>
+					<li>
+						<i class="item4-bgr1 it1"></i>
+						提供礼品级包装
+					</li>
+				</ul>
+				<div class="help">
+					<div class="h_lf">
+						<p>
+							<span>© liwuyou.com</span>
+							<a href="#" rel="nofollow" target="_blank">粤ICP备10222238号-1</a>
+						</p>
+					</div>
+					<div class="h_rg">
+						<p class="f-f5f5f5 f0">
+							<a href="#" target="_blank" class="f-f5f5f5">关于我们</a>
+							<a href="#" target="_blank" class="f-f5f5f5">帮助中心</a>
+							<a href="#" target="_blank" class="f-f5f5f5">人才招聘</a>
+							<a href="#" target="_blank" class="f-f5f5f5">售后服务</a>
+							<a href="#" target="_blank" class="f-f5f5f5">配送与验收</a>
+							<a href="#" target="_blank" class="f-f5f5f5">联系我们</a>
+						</p>
+					</div>
+				</div>
 			</div>
-			<div class="help">
-				
-			</div>
+			
 		</div>
 		<!-- footer -->
+		<div class="footer">
+			<div class="f_lf">
+				<div class="bottom f-e7e7e7">
+					<a>友情链接：</a>
+				    <a href="http://www.yofus.com/" target="_blank">照片书</a>
+				    <a href="http://www.shouliwang.com/" target="_blank">厦门特产</a>
+				    <a href="http://www.163yu.com/" target="_blank">新疆和田玉</a>
+				    <a href="http://www.nzjsw.com/" target="_blank">健身减肥 </a>
+				    <a href="http://www.iyingji.com" target="_blank">网上冲印</a>
+				    <a href="http://www.19online.cn" target="_blank">红酒</a>
+				    <a href="http://www.crd.cn" target="_blank">钻戒定制</a>
+				    <a href="http://www.sumcl.com" target="_blank">茶叶网</a>
+				    <a href="http://www.51pot.com/" target="_blank">紫砂壶</a>
+				    <a href="http://www.doido.com/" target="_blank">钻石</a>
+				    <a href="http://www.yipihuo.com" target="_blank">批发网</a>
+				    <a href="http://www.yichao.cn" target="_blank">眼镜</a>
+				    <a href="http://www.a9188.com/" target="_blank">藏龙古玩网</a>
+				    <a href="http://www.binlun.com.cn/" target="_blank">手表</a>
+				    <a href="http://www.hua.com/" target="_blank">中国鲜花礼品网</a>
+				    <a href="http://www.giftjie.com/" target="_blank">礼物</a>
+				    <a href="http://www.7192.com/" target="_blank">影楼网</a>
+				    <a href="http://www.hifidiy.net/" target="_blank">中国音响</a>
+				    <a href="http://www.zhibitouzi.com/" target="_blank">人民币收藏 </a>
+				    <a href="http://www.qj.com.cn/" target="_blank">加盟网</a>
+				    <a href="http://www.easeeyes.com/" target="_blank">美瞳</a>
+				    <a href="http://www.obolee.com/" target="_blank">欧宝丽官网</a>
+				    <a href="http://www.7dapei.com/" target="_blank">服装搭配 </a>
+				    <a href="http://www.shoes.net.cn/" target="_blank">鞋</a>
+				    <a href="http://www.dionly.com/" target="_blank">钻戒</a>
+				    <a href="http://www.zhidiy.com/" target="_blank">纸艺网</a>
+				    <a href="http://www.ynshangji.com/" target="_blank">商机网</a>
+				    <a href="http://www.temaiku.com/" target="_blank">唯品会品牌折扣网</a>
+				    <a href="http://www.ctoy.com.cn/" target="_blank">玩具</a>
+				    <a href="http://www.53shop.com/" target="_blank">53货源网</a>
+				    <a href="http://www.wto168.net/" target="_blank">国际珠宝网</a>
+				    <a href="http://www.inshion.com/" target="_blank">型尚网 </a>
+				    <a href="http://www.51fashion.com.cn/" target="_blank">饰品招商加盟</a>
+				    <a href="http://www.cocodiy.com/" target="_blank">礼物网</a>
+				    <a href="http://www.taoxie.com/" target="_blank">好乐淘买鞋</a>
+				    <a href="http://www.wine9.com/" target="_blank">红酒</a>
+				    <a href="http://www.52hua.cn/" target="_blank">鲜花网</a>
+				    <a href="http://www.yimianmian.com/" target="_blank">意绵绵珠宝</a>
+				    <a href="http://www.ynhmw.com/" target="_blank">云南花木网</a>
+				    <a href="http://www.lipin-bj.cn/" target="_blank">北京礼品公司</a>
+				    <a href="http://wuhan.liebiao.com/ " target="_blank">武汉分类信息</a>
+				    <a href="http://www.zbird.com/ " target="_blank">钻石</a>
+				    <a href="http://www.haole.com/ " target="_blank">好乐美饰</a>
+				    <a href="http://www.hznzcn.com/ " target="_blank">微商货源网</a>
+				    <a href="http://www.onlylady.com/ " target="_blank">Onlylady女人志</a>
+				    <a href="http://www.kimiss.com/ " target="_blank">闺蜜网</a>
+				    <a href="http://www.jieqinwang.com " target="_blank">婚车租赁</a>
+				    <i>申请友链QQ：59569526</i> 
+				</div>
+				<span class="f_rg">
+					<a href="#" target="_blank">
+						<img src="http://szcert.ebs.org.cn/Images/newGovIcon.gif" alt="111">
+					</a>
+				</span>
+			</div>
+		</div>
 
+		<!-- qq-pic -->
+		<div class="small-pic" style="display: block;opacity: 1;">
+			<a href="http://crm2.qq.com/page/portalpage/wpa.php?uin=4006112156&cref=http://www.liwuyou.com/&ref=&f=1&ty=1&ap=&as=" target="_blank" class="small-icon small-qq">
+				<i class="icon-bgr icon-qq"></i>
+			</a>
+			<a href="javascript:void(0)" class="small-icon">
+				<i class="icon-bgr icon-top"></i>
+			</a>
+		</div>
+		<!-- qq-pic end -->
 	</div>
 </div>
 	<script src="libs/jquery-3.3.1.js"></script>
