--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <div id="container">
 	
 	<div id="header">
-		<div class="h_logo">
+		<div class="h_logo ani-bg">
 			<a href="/"></a>
 		</div>
 		<div class="h_center">
 			<div class="left-menu">
-				<a href="#">礼物分类
-					<div class="show" style="display: none;">
+				<a href="#" class="fen">礼物分类</a>
+					<div class="show" style="display: none;z-index: 99;">
+						<div class="first"></div>
 						<a href="list1.html">少女心饰</a>
 						<a href="list1.html">萌萌美物</a>
 						<a href="list1.html">为爱停留</a>
@@ -25,22 +26,20 @@
 						<a href="list1.html">幸福烙印</a>
 						<a href="list1.html">爱情保鲜</a>
 					</div>
-				</a>
 				<i class="small-menu"></i>
-				
 			</div>
 			
 			<div class="list">
 				<ul>
-					<li class="list1"><a href="#">送礼导航</a></li>
+					<li class="list1"><a href="list1.html">送礼导航</a></li>
 					<li class="list2"><a href="create.html">创意礼物</a></li>
 					<li class="list2"><a href="newproduct.html">新品上架</a></li>
-					<li class="list2"><a href="#">520礼物</a></li>
+					<li class="list2"><a href="520礼物.html">520礼物</a></li>
 				</ul>
 			</div>
 			<!-- list1-show 送礼导航 子菜单-->
-			<div class="list1-show">
-				<div class="show-list" style="display:none;">
+			<div class="list1-show" style="display:none;">
+				<div class="show-list">
 					<ul class="u1">
 						<li>送给谁:</li>
 						<li><a href="#">不限</a></li>
@@ -63,6 +62,7 @@
 						<li><a href="#">纪念日</a></li>
 						<li><a href="#">想送任性</a></li>
 					</ul>
+					<button class="button">搜索</button>
 				</div>
 			</div>
 
@@ -70,9 +70,34 @@
 				<input type="text">
 				<a href="#"></a>
 			</div>
+			
 			<div class="h_login">
-				<a class="login" href="#"><i></i></a>
-				<a class="shopping" href="#"><i></i></a>
+				<a class="login user" href="#">
+					<i class="icon-user ani-bg"></i>
+				</a>
+				<a class="shopping" href="#">
+					<i class="icon-car ani-bg"></i>
+				</a>
+				<div class="user-signin" >
+					<dl class="tc" >
+						<dt class="f-b28850">
+							<a href="#" class="f-b28850">登录</a>/
+							<a href="#" class="f-b28850">注册</a>
+						</dt>
+						<dd class="lh2">
+							<a href="#">浏览历史</a>
+						</dd>
+						<dd class="lh2">
+							<a href="#">我的订单</a>
+						</dd>
+						<dd class="lh2">
+							<a href="#">我的收藏</a>
+						</dd>
+					</dl>
+				</div>
+				<div class="user-regis">
+					<p>购物车中还没有商品，赶紧选购吧！</p>
+				</div>
 			</div>
 
 		</div>
@@ -81,21 +106,16 @@
 	<!-- banner -->
 	<div class="banner">
 		<div class="img">
-			<a href="#"><img style="background:url(http://img1.liwuyou.com/data/afficheimg/20170919nxpbyx.jpg) center;"></a>
-			<a href="#"><img style="background:url(http://www.liwuyou.com/data/afficheimg/20160908cdrswo.jpg) center;"></a>
-			<a href="#"><img style="background: url(http://www.liwuyou.com/data/afficheimg/20160908aoxwfb.jpg) center;"></a>
-			<a href="#"><img style="background:url(http://www.liwuyou.com/data/afficheimg/20161123tzswot.jpg) center;"></a>
-			<a href="#"><img style="background: url(http://www.liwuyou.com/data/afficheimg/20160908vlyhsc.jpg) center;"></a>
+			<img class="banner-img" style="background:url(http://img1.liwuyou.com/data/afficheimg/20170919nxpbyx.jpg) center;">
+			<img style="background:url(http://www.liwuyou.com/data/afficheimg/20160908cdrswo.jpg) center;">
+			<img style="background: url(http://www.liwuyou.com/data/afficheimg/20160908aoxwfb.jpg) center;">
+			<img style="background:url(http://www.liwuyou.com/data/afficheimg/20161123tzswot.jpg) center;">
+			<img style="background: url(http://www.liwuyou.com/data/afficheimg/20160908vlyhsc.jpg) center;">
 		</div>
+		<div class="pagination"></div>
 		
-		<div class="tiao">
-			<span class="sp1"></span>
-			<span></span>
-			<span></span>
-			<span></span>
-			<span></span>
-		</div>
 	</div>
+	
 	<!-- services -->
 	<div class="services">
 		<ul>
@@ -348,7 +368,7 @@
 				<div class="follow-box4 f1">
 					<h2>400-611-2156</h2>
 					<p>周一至周日 8:00-24:00</p>
-					<a href="#">QQ在线交谈</a>
+					<a href="http://crm2.qq.com/page/portalpage/wpa.php?uin=4006112156&cref=http://www.liwuyou.com/&ref=&f=1&ty=1&ap=&as=">QQ在线交谈</a>
 				</div>
 			</div>
 			<div class="free-return">
@@ -465,46 +485,22 @@
 		<!-- qq-pic end -->
 	</div>
 </div>
-	<script src="libs/jquery-3.3.1.js"></script>
-	<script>
-		// $(function(){
-		// 	$(".left-menu>a").on("mouseenter",function(){
-		// 		$(this).children()				
-		// 		.stop()
-		// 		.fadeIn()
-		// 		.end()
-		// 		.siblings()
-		// 		.children()
-		// 		.stop()
-		// 		.fadeOut();
-		// 		// alert("11");
-		// 	})
-		// 	$(".left-menu>a").on("mouseleave",function(){
-		// 		$(this).children()
-		// 		// .css({
-		// 		// 	"display":"block"
-		// 		// })
-		// 		.stop()
-		// 		.fadeOut();
-		// 		// alert("11");
-		// 	})
-		// })
+
+<script src="libs/jquery-3.3.1.min.js"></script>
+<script src="libs/jquery-3.3.1.js"></script>
+<script src="libs/index.js"></script>
+<script src="libs/banner.js"></script>
+<script>
+	// 轮播图插件
 		$(function(){
-			// $("span").parents(".img").mouseover(function(){
-			// 	$(this)
-			// 	.stop().animate({left:1120});
-			// 	// 
-			// 	// .stop().animate({left:1120});
-			// })
-
-
-			// $("span").on("mouseenter",function(){
-			// 	// alert("111");
-
-			// 	$(".img").animate({
-			// 		left:1120
-			// 	})
-			// })
+			$(".banner")
+				.banner(".img",{
+					pagination:{
+						el:".pagination"
+					},
+					direction:"scroll",
+					loop:true
+			})
 		})
 	</script>
 </body>
