--- a/create.html
+++ b/create.html
@@ -85,13 +85,13 @@
 							<a href="login.html" class="f-b28850">登录</a>/
 							<a href="register.html" class="f-b28850">注册</a>
 						</dt>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">浏览历史</a>
 						</dd>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">我的订单</a>
 						</dd>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">我的收藏</a>
 						</dd>
 					</dl>
@@ -166,9 +166,9 @@
 				</div>
 				<!-- box-body -->
 				<div class="box-body">
-					<ul class="clear">
+					<ul class="clear uw">
 						<li>
-							<a href="#" class="img-link">
+							<a href="list1.html" class="img-link">
 								<img src="http://img3.liwuyou.com/images/201609/source_img/3576_P_1473046086992.jpg!220">
 							</a>
 							<p class="desc"><a href="#" target="_blank">不一Yang的惊喜</a></p>
@@ -179,18 +179,18 @@
 							</p>
 						</li>
 						<li>
-							<a href="#" class="img-link">
+							<a href="list1.html" class="img-link">
 								<img src="http://img3.liwuyou.com/images/201611/source_img/2941_P_1479807157792.jpg!220">
 							</a>
 							<p class="desc"><a href="#" target="_blank">不一Yang的惊喜</a></p>
 							<p>￥194.0</p>
 							<p class="dz">
-								<a href="#">可定制</a>
+					 			<a href="#">可定制</a>
 							    <span class="pj">3人评价</span> 
 							</p>
 						</li>
 						<li>
-							<a href="#" class="img-link">
+							<a href="list1.html" class="img-link">
 								<img src="http://img3.liwuyou.com/images/201609/source_img/3576_P_1473046086992.jpg!220">
 							</a>
 							<p class="desc"><a href="#" target="_blank">不一Yang的惊喜</a></p>
@@ -201,7 +201,7 @@
 							</p>
 						</li>
 						<li>
-							<a href="#" class="img-link">
+							<a href="list1.html" class="img-link">
 								<img src="http://img2.liwuyou.com/images/201609/source_img/3760_P_1472695926336.jpg!220">
 							</a>
 							<p class="desc"><a href="#" target="_blank">不一Yang的惊喜</a></p>
@@ -212,7 +212,7 @@
 							</p>
 						</li>
 						<li>
-							<a href="#" class="img-link">
+							<a href="list1.html" class="img-link">
 								<img src="http://img2.liwuyou.com/images/201802/source_img/3869_P_1519377823556.jpg!220">
 							</a>
 							<p class="desc"><a href="#" target="_blank">不一Yang的惊喜</a></p>
@@ -223,7 +223,7 @@
 							</p>
 						</li>
 						<li>
-							<a href="#" class="img-link">
+							<a href="list1.html" class="img-link">
 								<img src="http://img4.liwuyou.com/images/201308/source_img/3103_P_1377132736433.jpg!220">
 							</a>
 							<p class="desc"><a href="#" target="_blank">不一Yang的惊喜</a></p>
@@ -234,7 +234,7 @@
 							</p>
 						</li>
 						<li>
-							<a href="#" class="img-link">
+							<a href="list1.html" class="img-link">
 								<img src="http://img3.liwuyou.com/images/201706/source_img/3841_P_1498448034867.jpg!220">
 							</a>
 							<p class="desc"><a href="#" target="_blank">不一Yang的惊喜</a></p>
@@ -744,8 +744,10 @@
 	</div>
 		<!-- qq-pic end -->	
 
-<script src="libs/jquery-3.3.1.min.js"></script>
-<script src="libs/jquery-3.3.1.js"></script>
-<script src="libs/index.js"></script>
+
+<script src="src/libs/jquery-3.3.1.js"></script>
+<script src="src/model/index.js"></script>
+<script src="data/list_goods.json"></script>
+<script src="src/model/list.js"></script>
 </body>
 </html>
