--- a/list1.html
+++ b/list1.html
@@ -118,8 +118,10 @@
 				<a class="login user" href="#">
 					<i class="icon-user ani-bg"></i>
 				</a>
-				<a class="shopping" href="#">
+				<a class="shopping" href="car_detail.html" >
 					<i class="icon-car ani-bg"></i>
+					<!-- 购物车数量 -->
+					<span class="car_sum" ></span>
 				</a>
 				<div class="user-signin">
 					<dl class="tc">
@@ -127,13 +129,13 @@
 							<a href="login.html" class="f-b28850">登录</a>/
 							<a href="register.html" class="f-b28850">注册</a>
 						</dt>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">浏览历史</a>
 						</dd>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">我的订单</a>
 						</dd>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">我的收藏</a>
 						</dd>
 					</dl>
@@ -213,46 +215,8 @@
 				</div>
 				<!-- box-body -->
 				<div class="box-body">
-					<ul class="clear">
-						<li>
-							<a href="details.html" class="img-link">
-								<img src="http://img3.liwuyou.com/images/201609/source_img/3576_P_1473046086992.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img3.liwuyou.com/images/201611/source_img/2941_P_1479807157792.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img3.liwuyou.com/images/201609/source_img/3576_P_1473046086992.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
+					<ul class="clear box-ul">
+					<!--
 						<li>
 							<a href="#" class="img-link">
 								<img src="http://img2.liwuyou.com/images/201609/source_img/3760_P_1472695926336.jpg!220">
@@ -261,483 +225,12 @@
 								<a href="#" target="_blank">不一Yang的惊喜</a>
 							</p>
 							<p>￥194.0</p>
+							<div class="car">加入购物车</div>
 							<p class="dz">
 								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
 						<li>
-							<a href="#" class="img-link">
-								<img src="http://img2.liwuyou.com/images/201802/source_img/3869_P_1519377823556.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img4.liwuyou.com/images/201308/source_img/3103_P_1377132736433.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img3.liwuyou.com/images/201706/source_img/3841_P_1498448034867.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img4.liwuyou.com/images/201612/source_img/3791_P_1480911976483.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img5.liwuyou.com/images/201805/source_img/3766_P_1525429015624.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img4.liwuyou.com/images/201611/source_img/3761_P_1479115731458.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img1.liwuyou.com/images/201611/source_img/3759_P_1479898642255.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img4.liwuyou.com/images/201609/source_img/3758_P_1474258908993.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img5.liwuyou.com/images/201608/source_img/3757_P_1472633902699.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img5.liwuyou.com/images/201609/source_img/3658_P_1472795758219.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img3.liwuyou.com/images/201607/source_img/3755_P_1468375259282.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img5.liwuyou.com/images/201609/source_img/3754_P_1472718601439.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img1.liwuyou.com/images/201608/source_img/3727_P_1472613328195.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img5.liwuyou.com/images/201609/source_img/3754_P_1472718601439.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img5.liwuyou.com/images/201609/source_img/3754_P_1472718601439.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img2.liwuyou.com/images/201611/source_img/1799_P_1479898981626.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img1.liwuyou.com/images/201611/source_img/1802_P_1479899101770.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img4.liwuyou.com/images/201208/source_img/2009_P_1346183390748.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img1.liwuyou.com/images/201609/source_img/1807_P_1473733211525.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img5.liwuyou.com/images/201609/source_img/3754_P_1472718601439.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img4.liwuyou.com/images/201609/source_img/3758_P_1474258908993.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img1.liwuyou.com/images/201609/source_img/1804_P_1473733294450.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img4.liwuyou.com/images/201609/source_img/1984_P_1473057356723.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img4.liwuyou.com/images/201403/source_img/3248_P_1395099492283.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img5.liwuyou.com/images/201609/source_img/3104_P_1473729804409.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img3.liwuyou.com/images/201609/source_img/3102_P_1473730136737.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img4.liwuyou.com/images/201609/source_img/3758_P_1474258908993.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img3.liwuyou.com/images/201601/source_img/3296_P_1453791140337.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img1.liwuyou.com/images/201609/source_img/3277_P_1473730386415.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img4.liwuyou.com/images/201609/source_img/3758_P_1474258908993.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img4.liwuyou.com/images/201609/source_img/3250_P_1473731506993.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img2.liwuyou.com/images/201503/source_img/3451_P_1427167043381.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img1.liwuyou.com/images/201609/source_img/3450_P_1473054948355.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img2.liwuyou.com/images/201503/source_img/3451_P_1427167043381.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img1.liwuyou.com/images/201504/source_img/3624_P_1428655957335.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-						<li>
-							<a href="#" class="img-link">
-								<img src="http://img2.liwuyou.com/images/201608/source_img/3625_P_1472607645311.jpg!220">
-							</a>
-							<p class="desc">
-								<a href="#" target="_blank">不一Yang的惊喜</a>
-							</p>
-							<p>￥194.0</p>
-							<p class="dz">
-								<a href="#">可定制</a>
-								<span class="pj">3人评价</span>
-							</p>
-						</li>
-
+							
+					-->
 					</ul>
 					<div class="pages">
 						<a class="prev ic-bgr" href="#"></a>
@@ -870,9 +363,18 @@
 		</a>
 	</div>
 	<!-- qq-pic end -->
-	<script src="libs/jquery-3.3.1.min.js"></script>
-	<script src="libs/jquery-3.3.1.js"></script>
-	<script src="libs/index.js"></script>
+	<script src="src/libs/jquery-3.3.1.js"></script>
+	<script src="src/libs/jquery.cookie.js"></script>
+	<script src="src/libs/common-cookie.js"></script>
+	<script src="data/list_goods.json"></script>
+	<script src="src/model/index.js"></script>
+	<script src="src/model/list.js"></script>
 </body>
+<script>
+$(function(){
+      var shopCar = new ShopCar("http://localhost:80/liwuyou/data/list_goods.json",".box-ul");      
+})  
+	
+</script>
 
 </html>
