--- a/520礼物男.html
+++ b/520礼物男.html
@@ -84,13 +84,13 @@
 							<a href="login.html" class="f-b28850">登录</a>/
 							<a href="register.html" class="f-b28850">注册</a>
 						</dt>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">浏览历史</a>
 						</dd>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">我的订单</a>
 						</dd>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">我的收藏</a>
 						</dd>
 					</dl>
@@ -702,8 +702,8 @@
 	</div>
 		<!-- qq-pic end -->	
 
-<script src="libs/jquery-3.3.1.min.js"></script>
-<script src="libs/jquery-3.3.1.js"></script>
-<script src="libs/index.js"></script>
+
+<script src="src/libs/jquery-3.3.1.js"></script>
+<script src="src/model/index.js"></script>
 </body>
 </html>
