--- a/details.html
+++ b/details.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<title>详情页</title>
@@ -126,16 +125,16 @@
 				<div class="user-signin">
 					<dl class="tc">
 						<dt class="f-b28850">
-							<a href="#" class="f-b28850">登录</a>/
-							<a href="#" class="f-b28850">注册</a>
+							<a href="login.html" class="f-b28850">登录</a>/
+							<a href="register.html" class="f-b28850">注册</a>
 						</dt>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">浏览历史</a>
 						</dd>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">我的订单</a>
 						</dd>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">我的收藏</a>
 						</dd>
 					</dl>
@@ -147,21 +146,6 @@
 
 		</div>
 	</div>
-	<!-- <div class="goods-center-list"> -->
-			<!-- index-list  -->
-			<!-- <div class="index-list">
-				<div class="list-lf">
-					<a href="index.html">首页</a>
-					<span>/</span>
-					<a href="#">不一样的详情页</a>
-				</div>
-				<div class="list-rg">
-					<span class="fr" f-666>服务热线：400-611-2156 (8:00－24:00)</span>
-					<a href="http://crm2.qq.com/page/portalpage/wpa.php?uin=4006112156&cref=http://www.liwuyou.com/&ref=&f=1&ty=1&ap=&as=" class="fr qqbtn f-666"
-					 target="_blank">QQ在线交谈</a>
-				</div>
-			</div> -->
-	<!-- </div> -->
 	<div class="bg-f5f5f5 p-b-10">
 		<div class="currentloc bg-f5f5f5 clear">
 				<div class="goods-center f12">
@@ -173,7 +157,7 @@
 					 target="_blank">QQ在线交谈</a>
 					<span class="fr f-666">服务热线：400-611-2156 (8:00－24:00)</span>
 					<span class="fr m-r-100 f-a5937d">
-						<!-- 节日名称  <i class="icon-bgr icon-gift m-l-10"></i>-->
+						<!-- 节日名称  <i class="icon-bgr1 icon-gift m-l-10"></i>-->
 					</span>
 				</div>
 		</div>
@@ -190,9 +174,9 @@
 						<img src="http://img3.liwuyou.com/images/201609/source_img/3576_P_1474526324917.jpg!pro70.jpg" class="m-t-16 img_id_14294">
 					</div>
 					<div class="img-single fl rel" id="goods_single_list">
-						<span class="loading f16">
+					<!-- 	<span class="loading f16">
 							<img src="images/loader.gif">
-						</span>
+						</span> -->
 						<!-- glass start -->
 						<div class="glass">
 							<span class="grayBox"></span>
@@ -202,7 +186,7 @@
 						</div>
 						<!-- glass end -->
 
-						<div class="jpg">
+						<div class="jpg" >
 						<img src="http://img3.liwuyou.com/images/201609/source_img/3576_P_1473046086992.jpg!pro500.jpg" class="cloudzoom" data-cloudzoom="zoomImage: 'http://img3.liwuyou.com/images/201609/source_img/3576_P_1473046086992.jpg'">
 						<img src="http://img1.liwuyou.com/images/201609/source_img/3576_P_1474863932615.jpg!pro500.jpg" class="cloudzoom" data-cloudzoom="zoomImage: 'http://img1.liwuyou.com/images/201609/source_img/3576_P_1474863932615.jpg'"
 						 style="display:none;">
@@ -258,12 +242,12 @@
 
 
 							<a href="javascript:void(0)" class="collect fl ani-bg ">
-								<i class="icon-bgr icon-heart"></i>
+								<i class="icon-bgr1 icon-heart"></i>
 							</a>
 						</div>
 						<div class="btn-others">
 							<a href="category.php?id=385">
-								<i class="icon-bgr icon-item m-r-10"></i>查看更多同类商品</a>
+								<i class="icon-bgr1 icon-item m-r-10"></i>查看更多同类商品</a>
 						</div>
 					</div>
 				</div>
@@ -332,13 +316,13 @@
 				<p class="tr lh2 m-7" id="good_rate">好评率 0%</p>
 				<ul class="commen-list"></ul>
 				<div class="pages tc p-y-40 pages-sm pages-comment">
-					<a class="prev icon-bgr icon-page-l" href="javascript:void(0)"></a>
+					<a class="prev icon-bgr1 icon-page-l" href="javascript:void(0)"></a>
 					<a href="javascript:void(0)" class="current">1</a>
 					<a href="javascript:void(0)">2</a>
 					<a href="javascript:void(0)">3</a>
 					<a href="javascript:void(0)">4</a>
 					<a href="javascript:void(0)">5</a>
-					<a class="next icon-bgr icon-page-r" href="javascript:void(0)"></a>
+					<a class="next icon-bgr1 icon-page-r" href="javascript:void(0)"></a>
 				</div>
 			</div>
 			<div class="goods-tips f24 tc f-808080" id="consult">商品咨询</div>
@@ -353,7 +337,7 @@
 				<div class="look-all tc">
 					<a href="goods.php?act=question&id=3576" target="_blank" class="f16">查看全部
 						<span class="question-total">0</span>个提问
-						<i class="icon-bgr icon-page-r m-l-10"></i>
+						<i class="icon-bgr1 icon-page-r m-l-10"></i>
 					</a>
 				</div>
 			</div>
@@ -410,11 +394,11 @@
 
 			<div class="screen-image dn" id="screen_image" onselectstart="return false;">
 				<div id="naturalpic" class="tc rel">
-					<img src="images/loader.gif" class="loading">
+					<!-- <img src="images/loader.gif" class="loading"> -->
 				</div>
-				<i class="icon-bgr icon-goods-close hander" id="evt_close"></i>
-				<i class="icon-bgr icon-goods-left hander" id="evt_left"></i>
-				<i class="icon-bgr icon-goods-right hander" id="evt_right"></i>
+				<i class="icon-bgr1 icon-goods-close hander" id="evt_close"></i>
+				<i class="icon-bgr1 icon-goods-left hander" id="evt_left"></i>
+				<i class="icon-bgr1 icon-goods-right hander" id="evt_right"></i>
 				<ul id="tablist" class="tc"></ul>
 			</div>
 	</div>
@@ -490,16 +474,15 @@
 			<i class="icon-bgr icon-qq"></i>
 		</a>
 		<a href="javascript:void(0)" class="small-icon">
-			<i class="icon-bgr icon-top"></i>
+			<i class="icon-bgr icon-top" style="z-index: 99;"></i>
 		</a>
 	</div>
 	<!-- qq-pic end -->
 
-	<script src="libs/jquery-3.3.1.js"></script>
-	<script src="libs/common.js"></script>
-	<script src="libs/goods.js"></script>
-	<script src="libs/index.js"></script>
-	<!-- <script src="libs/banner.js"></script> -->
+	<script src="src/libs/jquery-3.3.1.js"></script>
+	<script src="src/libs/common.js"></script>
+	<script src="src/libs/goods.js"></script>
+	<script src="src/model/index.js"></script>
 </body>
 <script>
 	// 放大镜
