--- a/login.html
+++ b/login.html
@@ -77,8 +77,9 @@
 				<a class="login user" href="#">
 					<i class="icon-user ani-bg"></i>
 				</a>
-				<a class="shopping" href="#">
+				<a href="car_detail.html" class="shopping" >
 					<i class="icon-car ani-bg"></i>
+					<!--  -->
 				</a>
 				<div class="user-signin" >
 					<dl class="tc" >
@@ -86,18 +87,18 @@
 							<a href="#" class="f-b28850">登录</a>/
 							<a href="register.html" class="f-b28850">注册</a>
 						</dt>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">浏览历史</a>
 						</dd>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">我的订单</a>
 						</dd>
-						<dd class="lh2">
+						<dd class="lh-12">
 							<a href="#">我的收藏</a>
 						</dd>
 					</dl>
 				</div>
-				<div class="user-regis">
+				<div class="user-regis click-car">
 					<p>购物车中还没有商品，赶紧选购吧！</p>
 				</div>
 			</div>
@@ -118,21 +119,21 @@
 		</div>
 		<!-- login -->
 		<div class="login-box">
-			<form name="formLogin" action="" method="post">
+			<form name="formLogin" action="index.html" method="post">
 				<div class="login-title">
 					<b class="f24-welc">欢迎回来</b>
 					<span class="f16-reg">还没有账号？
-					<a href="#" class="reg">现在注册</a>
+					<a href="register.html" class="reg">现在注册</a>
 					</span>
 				</div>
 				<div class="line m-t-28">
-					<input type="text" name="username" placeholder="请输入手机号/邮箱" class="db text">
+					<input type="text" name="username" id="usr" placeholder="请输入手机号/邮箱" class="db text">
 				</div>
 				<div class="line ">
-					<input type="text" name="username" placeholder="请输入密码" class="db text">
+					<input type="text" name="pwd" id="pwd" placeholder="请输入密码" class="db text">
 				</div>
 				<div class="line ">
-					<a href="#" class="btn-login">立即登录</a>
+					<input type="button" class="btn-login" value="立即登录">
 				</div>
 				<div class="line clear m-t-20">
 					<label class="free">
@@ -234,9 +235,32 @@
 		</a>
 	</div>
 		<!-- qq-pic end -->	
-
-<script src="libs/jquery-3.3.1.min.js"></script>
-<script src="libs/jquery-3.3.1.js"></script>
-<script src="libs/index.js"></script>
 </body>
+
+<script src="src/libs/jquery-3.3.1.js"></script>
+<script src="src/model/index.js"></script>
+<script src="src/model/login.js"></script>
+
+<script>
+// require([],function(){
+// 	require(["model"])
+// })	
+
+	
+	// //验证手机号 
+	// function validPhone(phone){
+	// 	var patten = /^1[0-9]{10}$/;
+	// 	return patten.test(phone);
+	// }
+	// //验证邮箱号
+	// function checkEmail(email) {
+	// 	var patten  = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+	// 	return patten.test(email);
+	// }
+	// //去收尾空格
+	// function trim(str) {
+	// 	return str.replace(/(^\s*)|(\s*$)/g, "");
+	// }
+
+</script>
 </html>
